tests/machine/x/go/left_join.error
Error on line 0: output mismatch
-- got --
--- Left Join ---
Order 100 customer map[id:1 name:Alice] total 250
Order 101 customer map[id:0 name:] total 80
-- want --
--- Left Join ---
Order 100 customer map[id:1 name:Alice] total 250
Order 101 customer <nil> total 80
1: //go:build ignore
